--- a/MyFirst/pom.xml
+++ b/MyFirst/pom.xml
@@ -109,8 +109,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
-		</dependency>
-	
+		</dependency>	
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -134,8 +133,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.9</version>
 		</dependency>
+		<dependency>
+    	<groupId>com.microsoft.sqlserver</groupId>
+    		<artifactId>mssql-jdbc</artifactId>
+    		<version>6.1.0.jre8</version>
+		</dependency>		
         <!-- Servlet dependencies -->
-		 
 	</dependencies>
     <build>
         <plugins>
